# MuxPreBench

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
configs/: benchmark.yaml
docs/: EXPERIMENT_DESIGN.md
results/: downstream_metrics.csv  downstream_summary.csv  example_field.npz  paired_improvements.csv  run_metadata.json  technical_metrics.csv  technical_summary.csv
scripts/: run_benchmark.py
src/multiplexbench/: __init__.py  benchmark.py  data.py  evaluation.py  metrics.py  preprocessing.py  visualization.py
tests/: test_data.py  test_evaluation.py  test_preprocessing.py
