[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multiplex-preprocessing-benchmark"
version = "0.1.0"
description = "A reproducible benchmark for preprocessing multiplexed fluorescence microscopy images."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Xuantong Ji"},
  {name = "Jiahang Song"},
  {name = "Lu Yu"},
  {name = "Jiyao Zhang"},
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "PyYAML>=6.0",
  "scikit-image>=0.22",
  "scikit-learn>=1.4",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
multiplex-benchmark = "multiplexbench.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
